--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             --text-dark: #ffffff;
         }
         body {
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-family: 'Trebuchet MS', Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: var(--bg-light);
@@ -29,77 +29,102 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background: linear-gradient(2deg,  #abc2ff, #0205a7);
+            background: linear-gradient(2deg, #abc2ff, #0205a7);
             color: white;
-            padding: 5px 20px;
+            padding: 15px;
             width: 100%;
             box-sizing: border-box;
         }
-        .dark-mode .header-container{
-            background: linear-gradient(2deg,  #000000, #0205a7);
-        }
-        .logo {
-            display: flex;
-            align-items: center;
+        .dark-mode .header-container {
+            background: linear-gradient(2deg, #000000, #0205a7);
         }
         .logo img {
-            height: 49px;
-            margin-right: 10px;
+            height: 40px;
         }
-        .header-title {
-            font-size: 20px;
+        .menu-toggle {
+            display: none;
+            font-size: 24px;
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
         }
         .nav {
             display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
+            gap: 15px;
         }
         .nav a {
             color: white;
             text-decoration: none;
             padding: 10px 15px;
-            font-size: 14px;
+            font-size: 16px;
             transition: all 0.3s ease-in-out;
             position: relative;
-            white-space: nowrap;
         }
-        .nav a::after {
-            content: '';
+        .nav a:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
+        .sidebar {
+            position: fixed;
+            right: -300px;
+            width: 195px;
+            height: 53%;
+            background: linear-gradient(135deg, #0205a7, #3054a7);
+            padding-top: 30px;
+            transition: 0.5s cubic-bezier(0, 0, 0.76, -0.13);
+            border-top-left-radius: 30px;
+            border-bottom-left-radius: 30px;
+            box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
+        }
+        .sidebar.active {
+            right: 0;
+        }
+        .sidebar a {
+            display: block;
+            color: white;
+            padding: 15px;
+            text-decoration: none;
+            text-align: left;
+            font-size: 18px;
+            transition: all 0.3s ease-in-out;
+        }
+        .sidebar a:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 10px;
+            padding-left: 25px;
+        }
+        .close-btn {
             position: absolute;
-            left: 0;
-            bottom: -2px;
-            width: 100%;
-            height: 2px;
-            background: white;
-            transform: scaleX(0);
-            transition: transform 0.3s ease-in-out;
-        }
-        .nav a:hover::after {
-            transform: scaleX(1);
+            top: 15px;
+            left: 20px;
+            font-size: 24px;
+            cursor: pointer;
+            color: white;
         }
         .theme-toggle {
             cursor: pointer;
             background: none;
             border: none;
             color: white;
-            font-size: 16px;
-            padding: 10px;
-        }
-        .features {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
+            font-size: 18px;
             margin-top: 20px;
         }
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            max-width: 1200px;
+            margin: auto;
+        }
         .feature-box {
-            width: 300px;
             padding: 20px;
             background: #f0f0f0;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             text-align: center;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.3s;
         }
         .dark-mode .feature-box {
             background: #0c0c0c;
@@ -109,7 +134,7 @@
         }
         .whatsapp-float {
             position: fixed;
-            bottom: 100px;
+            bottom: 80px;
             right: 20px;
             background-color: #25D366;
             color: white;
@@ -119,34 +144,37 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 24px;
+            font-size: 35px;
             text-decoration: none;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease-in-out;
-        }
-        .whatsapp-float:hover {
-            transform: scale(1.1);
         }
         .footer {
-            position: fixed;
-            bottom: 0;
             width: 100%;
-            background: linear-gradient(180deg,  #abc2ff, #0205a7);
+            background: linear-gradient(180deg, #abc2ff, #0205a7);
             color: white;
             padding: 15px;
             text-align: center;
-            margin-top: 30px;
         }
-        .dark-mode .footer{
-            background: linear-gradient(170deg,  #000000, #0205a7);
+        .dark-mode .footer {
+            background: linear-gradient(170deg, #000000, #0205a7);
+        }
+        @media (max-width: 768px) {
+            .menu-toggle {
+                display: block;
+            }
+            .nav {
+                display: none;
+            }
+            .header-container {
+                flex-direction: row-reverse;
+            }
         }
     </style>
 </head>
 <body>
     <div class="header-container">
+        <button class="menu-toggle" onclick="toggleSidebar()"><i class='bx bx-menu'></i></button>
         <div class="logo">
             <a href="index.html"><img id="logo-img" src="Dark No BG.png" alt="Skillzify Logo"></a>
-            <div class="header-title">Skillzify - Learn Python</div>
         </div>
         <div class="nav">
             <a href="study_mate.html"><b>Study Materials</b></a>
@@ -154,8 +182,16 @@
             <a href="#"><b>AI Compiler</b></a>
             <a href="#"><b>Contact</b></a>
             <a href="#"><b>About Us</b></a>
-            <button class="theme-toggle" onclick="toggleTheme()"><i class='bx bx-moon'></i></button>
         </div>
+    </div>
+    <div class="sidebar" id="sidebar-menu">
+        <span class="close-btn" onclick="toggleSidebar()">&times;</span>
+        <a href="study_mate.html"><b>Study Materials</b></a>
+        <a href="#"><b>Python Learning</b></a>
+        <a href="#"><b>AI Compiler</b></a>
+        <a href="#"><b>Contact</b></a>
+        <a href="#"><b>About Us</b></a>
+        <button class="theme-toggle" onclick="toggleTheme()"><i class='bx bx-moon'></i></button>
     </div>
     <h1>Welcome to Skillzify</h1>
     <p>Your one-stop platform to master Python programming.</p>
@@ -183,6 +219,10 @@
             const logo = document.getElementById("logo-img");
             logo.src = document.body.classList.contains("dark-mode") ? "Light No BG.png" : "Dark No BG.png";
         }
+        function toggleSidebar() {
+            document.getElementById("sidebar-menu").classList.toggle("active");
+        }
     </script>
 </body>
 </html>
+
