--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             text-decoration: none;
         }
         .footer {
-            width: 99%;
+            width: 97%;
             background: linear-gradient(180deg, #abc2ff, #0205a7);
             color: white;
             padding: 15px;
@@ -189,8 +189,11 @@
             <a href="#"><b>AI Compiler</b></a>
             <a href="#"><b>Contact</b></a>
             <a href="#"><b>About Us</b></a>
+            <a href="login.html"><b>Login</b></a>
+            <a href="register.html"><b>Register</b></a>
             <button class="theme-toggle" onclick="toggleTheme()"><i class='bx bx-moon'></i></button>
         </div>
+        
     </div>
     <div class="sidebar" id="sidebar-menu">
         <span class="close-btn" onclick="toggleSidebar()">&times;</span>
@@ -199,6 +202,8 @@
         <a href="#"><b>AI Compiler</b></a>
         <a href="#"><b>Contact</b></a>
         <a href="#"><b>About Us</b></a>
+        <a href="login.html"><b>Login</b></a>
+        <a href="register.html"><b>Register</b></a>
         <button class="theme-toggle" onclick="toggleTheme()"><i class='bx bx-moon'></i></button>
     </div>
     <h1>Welcome to Skillzify</h1>
@@ -217,6 +222,7 @@
             <p>Test your Python code instantly with our AI-powered compiler.</p>
         </div>
     </div>
+    
     <a href="https://whatsapp.com/channel/0029Vb0aOSuG8l5DXJAK0S3X" class="whatsapp-float" target="_blank"><i class='bx bxl-whatsapp'></i></a>
     <div class="footer">
         <p>&copy; 2025 Skillzify. All Rights Reserved.</p>
