--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Skillzify - Learn Python</title>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="b440bc32-e9ac-43be-89a3-953408233c6f" type="text/javascript" async></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EMJ8DSPWYE"></script>
     <script>
