--- a/study_mate.html
+++ b/study_mate.html
@@ -6,7 +6,18 @@
     <title>PDF File System</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="b440bc32-e9ac-43be-89a3-953408233c6f" type="text/javascript" async></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EMJ8DSPWYE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-EMJ8DSPWYE');
+    </script>
 </head>
+    
 <body>
 
 <!-- Navbar Start -->
