--- a/study_mate.html
+++ b/study_mate.html
@@ -20,7 +20,7 @@
         <a href="index.html"><b>Home</b></a>
         <a href="#"><b>Python Learning</b></a>
         <a href="#"><b>AI Compiler</b></a>
-        <a href="#"><b>Contact</b></a>
+        <a href="contact.html"><b>Contact</b></a>
         <a href="#"><b>About Us</b></a>
         <a href="login.html" id="login-link"><b>Login</b></a>
         <a href="register.html" id="register-link"><b>Register</b></a>
@@ -33,7 +33,7 @@
     <a href="index.html"><b>Home</b></a>
     <a href="#"><b>Python Learning</b></a>
     <a href="#"><b>AI Compiler</b></a>
-    <a href="#"><b>Contact</b></a>
+    <a href="contact.html"><b>Contact</b></a>
     <a href="#"><b>About Us</b></a>
     <a href="login.html" id="login-link2"><b>Login</b></a>
     <a href="register.html" id="register-link2"><b>Register</b></a>
